--- a/index.html
+++ b/index.html
@@ -99,36 +99,57 @@
 <section class="ResearchExperience" id="ResearchExperience">
   <br><br><br><br><br>
   <h2 class="heading"><i class="fas fa-graduation-cap"></i>Research<span> Experience</span></h2>
-    <h2 style="color: #ff9f55;">No. of Publications: 1</h2>
-  <h2 class="heading"> </h2>
+  <h1>Author Information</h1>
 
-  <div class="timeline">
+<h2 style="color: #ff9f55;">No. of Publications: <span id="publication-count"></span></h2>
+<h2 style="color: #ff9f55;">h-Index: <span id="hIndex-count"></span></h2>
+<h2 style="color: #ff9f55;">No. of Citations: <span id="citationCount-count"></span></h2>
 
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>Dynamical instabilities cause extreme events in a theoretical Brusselator model</h2>
-        </div>
-        <div class="desc">
-            <p>S. V. Manivelan, S. Sabarathinam, K.Thamilmaran, I.Manimehan</p>
-            <h3><span>Read On:</span> <a href="https://example.com">Chaos, Solitons & Fractals (2023)</a></h3>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>"Need to embark on an extended journey."</h2>
-        </div>
-        <div class="desc">
-          <p></p>
-          <h3><span></a></h3>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="timeline" id="publication-timeline">
+    <!-- The publication timeline will be displayed here -->
 </div>
+
+<script>
+    // Fetch data from the API with additional paper details
+    fetch('https://api.semanticscholar.org/graph/v1/author/2221815?fields=name,hIndex,citationCount,paperCount,papers.journal,papers.citationCount,papers.authors,papers.title,papers.externalIds')
+        .then(response => response.json())
+        .then(data => {
+            // Update the No. of Publications count
+            document.getElementById('publication-count').textContent = data.paperCount;
+            document.getElementById('hIndex-count').textContent = data.hIndex;
+            document.getElementById('citationCount-count').textContent = data.citationCount;
+            // Update the HTML content with the retrieved data
+            const timelineElement = document.getElementById('publication-timeline');
+            timelineElement.innerHTML = data.papers.map((paper, index) => {
+                // Extract author names from the array of objects
+                const authorNames = paper.authors.map(author => author.name).join(', ');
+
+                // Extract journal name
+                const journalName = paper.journal && paper.journal.name ? paper.journal.name : 'Unknown Journal';
+
+                // Extract DOI from externalIds if available
+                const doi = paper.externalIds && paper.externalIds.DOI ? paper.externalIds.DOI : 'No DOI available';
+
+                return `
+                    <div class="container ${index % 2 === 0 ? 'right' : 'left'}">
+                        <div class="content">
+                            <div class="tag">
+                                <h2>${paper.title}</h2>
+                            </div>
+                            <div class="desc">
+                                <p style="color: #ede9e5;">${authorNames}</p>
+                                <h2>Citation: ${paper.citationCount}</h2>
+                                <h3><span>Read On:</span> <a href="https://doi.org/${doi}">${journalName}</a></h3>
+                            </div>
+                        </div>
+                    </div>
+                `;
+            }).join('');
+        })
+        .catch(error => {
+            console.error('Error fetching data:', error);
+        });
+</script>
 
 <!-- PresentWork section starts -->
 <section class="education" id="PresentWork">
@@ -138,7 +159,7 @@
   <h5>Working on <span class="typing-text"></span></h5>  
   <br><br><br><br><br><br>
         <div class="tag">
-          <h6>"Investigating Extreme Events Occurrences in Bio-Physical Systems"</h6>
+          <h6>"Investigating Extreme Events Occurrences in Dynamical Systems"</h6>
         </div>
         <div class="desc">
           <center><p style="color: #FFFFFf;">S. V. Manivelan, K. Thamilmaran, I. Manimehan</p></center>
