--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h3>I'm S.V.Manivelan </h3>
         <span class="tag">Research Scholar<br>M.R. Government Arts College, Mannargudi - 614 001.</span>
         
-        <p align="justify">I am a Research Scholar specializing in Nonlinear Dynamics and Chaos, delving deep into Physics through computational insights. My work revolves around unraveling the complexities of natural systems, utilizing computational methods to decode intricate phenomena. My passion lies in deciphering the underlying order within seemingly chaotic systems, exploring emergent behaviors, and uncovering the subtle interplay of nonlinear elements. I thrive on the challenge of navigating these complexities, driven by an insatiable curiosity to understand the fundamental principles governing our universe and contribute to the evolving landscape of Computational Physics. </p>
+        <p align="justify">I am a Research Scholar specializing in Nonlinear Dynamics and Chaos, delving deep into Physics through computational insights. My work revolves around unraveling the complexities of natural systems, utilizing computational methods to decode intricate phenomena. My passion lies in deciphering the underlying order within seemingly chaotic systems, exploring emergent behaviors, and uncovering the subtle interplay of nonlinear elements. I thrive on the challenge of navigating these complexities, driven by an insatiable curiosity to understand the fundamental principles governing our universe and contribute to the evolving landscape of Computational Physics. I also have a keen interest in Extreme Value Theory and the study of extreme events. My research delves into understanding the statistical properties and dynamics of extreme values in complex systems. Extreme events, whether in the context of climate phenomena, financial markets, or other natural processes, play a crucial role in shaping the behavior of these systems. By applying the principles of EVT, I aim to unravel the underlying patterns and mechanisms governing extreme events, contributing to a deeper comprehension of their occurrence and impact. Guided by my mentor, <b>Dr. I. Manimehan</b> & Dr. K. Thamilmaran, provides invaluable mentorship, extending beyond academia, shaping my research journey. Motivated by an insatiable curiosity, I aim to contribute meaningfully to our research under their guidance.</p>
         
         <div class="resumebtn">
             <a href="./resume.pdf" target="_blank" class="btn"><span>Resume</span>
@@ -134,7 +134,7 @@
                     <div class="container ${index % 2 === 0 ? 'right' : 'left'}">
                         <div class="content">
                             <div class="tag">
-                                <h2>${paper.title}</h2>
+                                <h2 style="text-align: left;; font-size: 17px;">${paper.title}</h2>
                             </div>
                             <div class="desc">
                                 <p style="color: #ede9e5;">${authorNames}</p>
@@ -168,7 +168,7 @@
           <h6></h6>
       </div>
       <div class="resumebtn">
-        <center><a href="https://yourscholarlink.com" target="_blank" class="btn"><span>Google Scholar</span>
+        <center><a href="https://scholar.google.com/" target="_blank" class="btn"><span>Google Scholar</span>
             <i class="fas fa-graduation-cap"></i>
         </a></center>
     </div>
