--- a/index.html
+++ b/index.html
@@ -150,7 +150,13 @@
             console.error('Error fetching data:', error);
         });
 </script>
-
+<br><br><br><br><br>
+<div class="resumebtn">
+  <center><a href="https://github.com/" target="_blank" class="btn" style="color: #000000;"><span>Data Repositories*</span>
+      <i class="fas fa-database"></i>
+  </a></center>
+</div><br><br><br>
+<p style="color: #FFFFFf;">* If access to any data associated with my research is needed, I am open to sharing it in accordance with regulations and without conflicts of interest. If you are interested, you can reach out to me for further details or access.</p>
 <!-- PresentWork section starts -->
 <section class="education" id="PresentWork">
   <br><br><br><br><br>
