--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <i class="fas fa-database"></i>
   </a></center>
 </div><br><br><br>
-<p style="color: #FFFFFf;">* If access to any data associated with my research is needed, I am open to sharing it in accordance with regulations and without conflicts of interest. If you are interested, you can reach out to me for further details or access.</p>
+<center><p style="color: #FFFFFf;">* If access to any data associated with my research is needed, I am open to sharing it in accordance with regulations and without conflicts of interest.</p></center>
 <!-- PresentWork section starts -->
 <section class="education" id="PresentWork">
   <br><br><br><br><br>
