--- a/index.html
+++ b/index.html
@@ -146,14 +146,8 @@
             console.error('Error fetching data:', error);
         });
 </script>
-<br><br><br><br><br>
+</section>
 
-<div class="resumebtn">
-  <center><a href="https://github.com/" target="_blank" class="btn" style="color: #000000;"><span>Data Repositories*</span>
-      <i class="fas fa-database"></i>
-  </a></center>
-</div><br><br><br>
-<center><p style="color: #FFFFFf;">* If access to any data associated with my research is needed, I am open to sharing it in accordance with regulations and without conflicts of interest.</p></center>
 <!-- PresentWork section starts -->
 <section class="education" id="PresentWork">
   <br><br><br><br><br>
@@ -287,6 +281,14 @@
         </div>
       </div>
     </div>-->
+    <br><br><br><br><br>
+
+<div class="resumebtn">
+  <center><a href="https://github.com/" target="_blank" class="btn" style="color: #000000;"><span>Data Repositories*</span>
+      <i class="fas fa-database"></i>
+  </a></center>
+</div><br><br><br>
+<center><p style="color: #FFFFFf;">* If access to any data associated with my research is needed, I am open to sharing it in accordance with regulations and without conflicts of interest.</p></center>
 </div>
 </section>
 
